# devOps

./: CMakeLists.txt
.github/workflows/: main.yml
app/: CMakeLists.txt  main.cpp
cmake/: Warnings.cmake
src/: CMakeLists.txt  myLib.cpp
src/inc/: CMakeLists.txt  myLib.h
tests/: CMakeLists.txt  main.cpp
